# prism_downloader

./: README.md  pyproject.toml
example/: download_ppt.cmd  download_ppt__ca_bundle.cmd  download_tmax.cmd  download_tmax__ca_bundle.cmd  download_tmin.cmd  download_tmin__ca_bundle.cmd
src/prism_downloader/: __main__.py  prism_downloader.py
